--- a/demo/index.html
+++ b/demo/index.html
@@ -22,6 +22,7 @@
             <h1><a href="#/template2">template2</a></h1>
             <h1><a href="#/popup1">popup1</a></h1>
             <h1><a href="#/popup2">popup2</a></h1>
+            <button ng-click="showPopup1()">show popup 01</button>                
         </section>
         
         <section>
